<resources>
    <string name="app_name">Goally</string>
    <string name="Goals">Цели</string>
    <string name="Goal">Цель</string>
    <string name="Hello">Добрый день!</string>
    <string name="morning_greeting">Доброе утро!</string>
    <string name="day_greeting">Добрый день!</string>
    <string name="evening_greeting">Добрый вечер!</string>
    <string name="night_greeting">Доброй ночи!</string>
    <string name="Save">Сохранить</string>
    <string name="Discription">Создать цель</string>
    <string name="HintCreateGoal">Чего вы хотите достичь?</string>
    <string name="CreateNewTask">Создать задачу</string>
    <string name="AddNewTask">Добавить задачу</string>
    <string name="HintTask">Введите задачу</string>
    <string name="Cancel">Отмена</string>
    <string name="DiscriptionZero">Продам гараж</string>
    <string name="ChooseADeadline">Выберите дедлайн</string>
    <string name="Today">Сегодня</string>
    <string name="Tasks">Задачи</string>
    <string name="Archive">Архив</string>
    <string name="DeleteGoal">Удалить цель</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goally">Goally</string>
    <string name="info_robot_text"><b>Помощь робота</b> - это функция, основанная на GPT-3.5. Просто введите свою цель, и модель автоматически создаст для вас задачи.</string>
</resources>