<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/goals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/Hello"
        android:textColor="#434343"
        android:textSize="26sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/current_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:textColor="#A4A4A4"
        android:textSize="17sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="@+id/goals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goals" />


    <ScrollView
        android:id="@+id/listGoals"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/DiscriptionZero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goals">


    </ScrollView>

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/floatingActionButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="44dp"-->
<!--        android:layout_marginBottom="36dp"-->
<!--        android:clickable="true"-->
<!--        android:contentDescription="@string/Discription"-->
<!--        android:onClick="GoToAddGoal"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:srcCompat="@android:drawable/ic_menu_add" />-->

    <ImageButton
        android:id="@+id/my_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/my_button_background"
        android:contentDescription="@string/Discription"
        android:scaleType="center"
        android:onClick="GoToAddGoal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/plus" />





</androidx.constraintlayout.widget.ConstraintLayout>